# lvgl_simulator_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  repos.json
utils/: lv_conf.h  lvgl_wrapper.hpp
